# TempMon

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: docs.yml
arch/: hw_arch_tempmon.rst  sw_arch_tempmon.rst  sys_arch_tempmon.rst
arch/ddd/: 1_dma_decision.rst  2_isr_decision.rst  design_decisions.rst
core/: CMakeLists.txt
core/app/: main_c.c  main_cpp.cpp  mock.c  mock.cpp  mock.h  mock.hpp
core/hw/: CMakeLists.txt
core/hw/inc/: HwRev.hpp  HwRevA.hpp  HwRevB.hpp
core/hw/src/: HwRev.cpp  HwRevA.cpp  HwRevB.cpp
core/mcal/: CMakeLists.txt
core/mcal/adc/: CMakeLists.txt
core/mcal/adc/inc/: adc.h
core/mcal/adc/src/: adc.c
core/mcal/gpio/: CMakeLists.txt
core/mcal/gpio/inc/: gpio.h
core/mcal/gpio/src/: gpio.c
core/mcal/gpt/: CMakeLists.txt
core/mcal/gpt/inc/: gpt.h  gpt.hpp
core/mcal/gpt/src/: gpt.c  gpt.cpp
core/mcal/i2c/: CMakeLists.txt
core/mcal/i2c/inc/: i2c.h
core/mcal/i2c/src/: i2c.c
core/mcal/wdg/: CMakeLists.txt
core/mcal/wdg/inc/: wdg.h
core/mcal/wdg/src/: wdg.c
core/services/: CMakeLists.txt
core/services/mon/: CMakeLists.txt
core/services/mon/inc/: mon.h  mon.hpp
core/services/mon/src/: mon.c  mon.cpp
core/services/nvm/: CMakeLists.txt
core/services/nvm/inc/: nvm.h  nvm_config.h
core/services/nvm/src/: nvm.c
core/services/time/: CMakeLists.txt
core/services/time/inc/: time.h
core/services/time/src/: time.c
docs/: conf.py  index.rst  requirements.txt
reqs/hardware/: hw_rs_tempmon.rst
reqs/software/: sw_rs_tempmon.rst
reqs/system/: sys_rs_tempmon.rst
tools/scripts/: build_docs.sh
